--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Physics-Informed Learning for Energy Systems"
 preposition: at
 description: "Workshop at [ACM e-Energy 2026](https://energy.acm.org/conferences/eenergy/2026/)"
-baseurl: "/"
+baseurl: ""
 url: "https://learning-for-energy.github.io" # the base hostname & protocol for your site
 
 remote_theme: null # "DigitaleGesellschaft/jekyll-theme-conference@v3.6.1"
